cmake_minimum_required(VERSION 3.0)
set (CMAKE_CXX_STANDARD 11)
project(LOCOInterpolate)

message(STATUS "Setting MSVC flags")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHc /std:c++latest")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../bin")

include_directories(${CMAKE_SOURCE_DIR}/LCFunction)
include_directories(${CMAKE_SOURCE_DIR}/LCRealFunction)
include_directories(${CMAKE_SOURCE_DIR}/libs/protobuf/include)
include_directories(${CMAKE_SOURCE_DIR}/libs/eigen)
include_directories(${CMAKE_SOURCE_DIR}/LCUtils)

add_subdirectory(LCFunction)
add_subdirectory(LCRealFunction)
add_subdirectory(LCAdaptiveSampling)
add_subdirectory(LCUtils)
add_subdirectory(TestDebug)
add_subdirectory(TestExamples)

add_dependencies(LCFunction LCUtils)
add_dependencies(LCRealFunction LCUtils)
add_dependencies(LCAdaptiveSampling LCUtils)
add_dependencies(LCAdaptiveSampling LCFunction)
add_dependencies(LCAdaptiveSampling LCRealFunction)
add_dependencies(TestDebug LCUtils)
add_dependencies(TestDebug LCFunction)
add_dependencies(TestDebug LCRealFunction)
add_dependencies(TestDebug LCAdaptiveSampling)
add_dependencies(TestExamples LCUtils)
add_dependencies(TestExamples LCFunction)
add_dependencies(TestExamples LCRealFunction)
add_dependencies(TestExamples LCAdaptiveSampling)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT TestDebug)
