include_directories(${CMAKE_SOURCE_DIR}/libs/eigen)
include_directories(${CMAKE_SOURCE_DIR}/libs/protobuf/include)
include_directories(${CMAKE_SOURCE_DIR}/LCUtils)
include_directories(${CMAKE_SOURCE_DIR}/LCFunction)
include_directories(${CMAKE_SOURCE_DIR}/LCRealFunction)
include_directories(${CMAKE_SOURCE_DIR}/LCAdaptiveSampling)

link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

add_executable(TestDebug lodepng.h lodepng.cpp TestDebug.cpp)

if(UNIX OR APPLE)
	target_link_libraries(TestDebug debug LCUtils.a)
	target_link_libraries(TestDebug optimized LCUtils.a)
	target_link_libraries(TestDebug debug LCAdaptiveSampling.a)
	target_link_libraries(TestDebug optimized LCAdaptiveSampling.a)
	target_link_libraries(TestDebug debug LCFunction.a)
	target_link_libraries(TestDebug optimized LCFunction.a)
	target_link_libraries(TestDebug debug LCRealFunction.a)
	target_link_libraries(TestDebug optimized LCRealFunction.a)
	target_link_libraries(TestDebug optimized ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobuf.a)
	target_link_libraries(TestDebug debug ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobufd.a)
endif()

if(WIN32)
	target_link_libraries(TestDebug debug LCUtils.lib)
	target_link_libraries(TestDebug optimized LCUtils.lib)
	target_link_libraries(TestDebug debug LCAdaptiveSampling.lib)
	target_link_libraries(TestDebug optimized LCAdaptiveSampling.lib)
	target_link_libraries(TestDebug debug LCFunction.lib)
	target_link_libraries(TestDebug optimized LCFunction.lib)
	target_link_libraries(TestDebug debug LCRealFunction.lib)
	target_link_libraries(TestDebug optimized LCRealFunction.lib)
	target_link_libraries(TestDebug optimized ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobuf.lib)
	target_link_libraries(TestDebug debug ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobufd.lib)
endif()
