include_directories(${CMAKE_SOURCE_DIR}/libs/eigen)
include_directories(${CMAKE_SOURCE_DIR}/libs/protobuf/include)
include_directories(${CMAKE_SOURCE_DIR}/LCUtils)
include_directories(${CMAKE_SOURCE_DIR}/LCFunction)
include_directories(${CMAKE_SOURCE_DIR}/LCRealFunction)
include_directories(${CMAKE_SOURCE_DIR}/LCAdaptiveSampling)

link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

add_executable(TestExamples lodepng.h  lodepng.cpp TestExamples.cpp)

if(UNIX OR APPLE)
	target_link_libraries(TestExamples debug LCUtils.a)
	target_link_libraries(TestExamples optimized LCUtils.a)
	target_link_libraries(TestExamples debug LCAdaptiveSampling.a)
	target_link_libraries(TestExamples optimized LCAdaptiveSampling.a)
	target_link_libraries(TestExamples debug LCFunction.a)
	target_link_libraries(TestExamples optimized LCFunction.a)
	target_link_libraries(TestExamples debug LCRealFunction.a)
	target_link_libraries(TestExamples optimized LCRealFunction.a)
	target_link_libraries(TestExamples optimized ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobuf.a)
	target_link_libraries(TestExamples debug ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobufd.a)
endif()

if(WIN32)
	target_link_libraries(TestExamples debug LCUtils.lib)
	target_link_libraries(TestExamples optimized LCUtils.lib)
	target_link_libraries(TestExamples debug LCAdaptiveSampling.lib)
	target_link_libraries(TestExamples optimized LCAdaptiveSampling.lib)
	target_link_libraries(TestExamples debug LCFunction.lib)
	target_link_libraries(TestExamples optimized LCFunction.lib)
	target_link_libraries(TestExamples debug LCRealFunction.lib)
	target_link_libraries(TestExamples optimized LCRealFunction.lib)
	target_link_libraries(TestExamples optimized ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobuf.lib)
	target_link_libraries(TestExamples debug ${CMAKE_SOURCE_DIR}/libs/protobuf/lib/libprotobufd.lib)
endif()
